# execute_applet

./: .gitignore  CMakeLists.txt  metadata.json  readme.md
contents/config/: config.qml  main.xml
contents/ui/: ConfigGeneral.qml  ConfigIcon.qml  main.qml
